--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,60 @@
-name: Linux VPS Setup
+name: BugHunter-VPS-V5
 
 on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 360
+    
     steps:
     - name: Install Dependencies
-      run: sudo apt update && sudo apt install -y wget unzip openssh-server
+      run: sudo apt update && sudo apt install -y wget unzip openssh-server curl jq
 
-    - name: Download Ngrok
-      run: wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip -O ngrok.zip
+    - name: Setup Ngrok
+      run: |
+        wget -q https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip -O ngrok.zip
+        unzip -o ngrok.zip
+        chmod +x ngrok
+        ./ngrok config add-authtoken "${{ secrets.NGROK_AUTH_TOKEN }}"
 
-    - name: Extract Ngrok
-      run: unzip ngrok.zip
+    - name: Enable Root SSH
+      run: |
+        # Set root password to toor123
+        echo "root:toor123" | sudo chpasswd
+        
+        # Configure SSH for root login
+        sudo sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+        sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
+        sudo systemctl restart ssh
 
-    - name: Authenticate Ngrok
-      run: ./ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    - name: Enable SSH Server
-      run: sudo systemctl start ssh && sudo systemctl enable ssh
-
-    - name: Set Default Password (Auto)
-      run: echo "runneradmin:P@ssw0rd!" | sudo chpasswd
-
-    - name: Allow SSH Login
-      run: sudo sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && sudo systemctl restart ssh
-
-    - name: Create SSH Tunnel with Ngrok
-      run: ./ngrok tcp 22
-    
+    - name: Start Tunnel & Print Access
+      run: |
+        # Start ngrok in background (using &) so it doesn't block the script
+        ./ngrok tcp 22 --log=stdout > ngrok.log 2>&1 &
+        
+        echo "Generating your SSH Link..."
+        sleep 10
+        
+        # Get the URL from the local Ngrok API
+        for i in {1..10}; do
+          FULL_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url // empty')
+          if [ ! -z "$FULL_URL" ]; then
+            CLEAN_URL=${FULL_URL//tcp:\/\//}
+            echo "======================================================"
+            echo "            VPS READY (6 HOURS REMAINING)            "
+            echo "======================================================"
+            echo "COMMAND: ssh root@${CLEAN_URL//:/ -p }"
+            echo "PASSWORD: toor123"
+            echo "======================================================"
+            break
+          fi
+          echo "Waiting for IP... ($i)"
+          sleep 5
+        done
+        
+        # Keep the session alive
+        while true; do
+          sleep 300
+          echo "Keep-alive: $(date)"
+        done
