--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,20 @@
-name: BugHunter-VPS-Final-Fix
-on: [push, workflow_dispatch]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 360
-
-    steps:
-    - name: Install Dependencies
-      run: sudo apt update && sudo apt install -y wget unzip openssh-server curl jq
-
-    - name: Setup Ngrok
+- name: Start Tunnel (No Card Required)
       run: |
-        wget -q https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip -O ngrok.zip
-        unzip -o ngrok.zip
-        chmod +x ngrok
-        ./ngrok config add-authtoken "${{ secrets.NGROK_AUTH_TOKEN }}"
-
-    - name: Enable Root SSH
-      run: |
-        # Use 'root' instead of 'runneradmin'
-        echo "root:toor123" | sudo chpasswd
-        sudo sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-        sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
-        sudo systemctl restart ssh
-
-    - name: Start Tunnel & Debug
-      run: |
-        # 1. Start Ngrok
-        ./ngrok tcp 22 --log=stdout > ngrok.log 2>&1 &
+        # Use localhost.run to create a tunnel without an account/card
+        # We redirect the output to a file to catch the URL
+        ssh -o StrictHostKeyChecking=no -R 80:localhost:22 nokey@localhost.run > tunnel.log 2>&1 &
+        
+        echo "Waiting for tunnel to initialize..."
         sleep 10
-
-        # 2. Check if tunnel is actually up
-        RAW_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url // empty')
-
-        if [ -z "$RAW_URL" ] || [ "$RAW_URL" = "null" ]; then
-          echo "======================================================"
-          echo "❌ ERROR: NGROK FAILED TO START"
-          echo "REASON FROM LOGS:"
-          cat ngrok.log
-          echo "======================================================"
-          exit 1
-        fi
-
-        # 3. Print the successful connection info
-        CLEAN_URL=${RAW_URL//tcp:\/\//}
+        
+        # Print the log so you can see the connection string
+        cat tunnel.log
+        
         echo "======================================================"
-        echo "✅ VPS READY (Peshawar Hunter Edition)"
-        echo "======================================================"
-        echo "COMMAND: ssh root@${CLEAN_URL//:/ -p }"
+        echo "✅ VPS READY"
+        echo "Look at the line above starting with 'tunneled with' "
+        echo "It will look like: ssh -p 443 root@xyz.lhr.life"
         echo "PASSWORD: toor123"
         echo "======================================================"
-
-        # Keep alive
+        
         while true; do sleep 300; done
-      
